src/App.css
body {
  margin: 0;
  font-family: "Roboto", sans-serif;
}

.App {
  height: 100vh;
  width: 100vw;
  display: flex;
  align-items: left;
  justify-content: flex-start;
  padding: 20px;
}

.boxWrapper {
  margin: 24px;
  margin-bottom: 48px;
  padding: 24px;
  width: calc(100% - 120px);
  padding-bottom: 150px;
  overflow: scroll !important;
  /* position: relative; */
}

.carbon-dropdown{
  max-width: 400px;
  min-width: 250px;
}

.rowItemSpacer{
  padding-left: 12px;
  padding-right: 12px;
}

.noWrap{
  white-space: nowrap;
  margin: auto;
}

.whiteBg{
  background-color: white;
}

.tipSeenInBox{}

.subtext, text{
  margin: 0 8px 8px 8px;
  size: 14px;
  color: #676879;
  line-height: 22px;
  font-style: italic;
}

.actionBoxesContainer{
  font-size: 0.85rem;
  max-width: 30vw;
}

.actionBoxesContainer div{
  padding: 5px;
}


div.actionBoxesContainer p{
  margin: 0;
  padding: 0 5px 5px 10px;
}

